cmake_minimum_required(VERSION 3.20)
project(EDD_SmartClass_201908327)

set(CMAKE_CXX_STANDARD 14)

add_executable(EDD_SmartClass_201908327 main.cpp  CUsuarios.cpp CUsuarios.h ListaDobleCircularEstudiantes.cpp ListaDobleCircularEstudiantes.h ListaTareas.cpp ListaTareas.h Lectura.cpp Lectura.h ListaEnlazadaTareas.cpp ListaEnlazadaTareas.h)
